[metadata]
name = rate_limiter
version = 0.0.1
author = SurajpratapsinghSayar 
author_email = sunnysayar@outlook.com
description = Custom rate limiter for FastAPI
long_description = file: README.md
license = MIT
license_file = LICENSE
classifiers =
    Framework :: FastAPI
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    = src
python_requires = 
    fastapi==0.104.1
    logging==0.4.9.6
    vicorn==0.24.0.post1
    black==23.11.0

[tool:uvicorn]
module = src.main:app
port = 8000
